# Pony

./: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  SECURITY.md  osv-scanner.toml  package.json  pnpm-lock.yaml  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md  zap-rules.tsv
.github/workflows/: ai-review.yml  dast.yml  fuzz.yml  lint-test.yml  release.yml  sast.yml  sca.yml
apps/backend/: Dockerfile  pyproject.toml
apps/backend/data/: manuf.tsv
apps/backend/data/demo_pcaps/: demo-deauth-incident.pcapng
apps/backend/src/cheeky_pony_backend/: __init__.py  config.py  dependencies.py  logging.py  main.py  security.py
apps/backend/src/cheeky_pony_backend/api/: __init__.py  pcap_upload_preflight.py  synthetic_marker.py  ws.py
apps/backend/src/cheeky_pony_backend/api/v1/: __init__.py  alerts.py  audit.py  auth.py  auth_audit.py  auth_session.py  device_anomaly.py  devices.py  engagement_end.py  engagements.py  insights.py  lab.py  lab_status.py  oui.py  pcap_analysis.py  pcap_common.py  pcaps.py  reports.py  sensors.py  system.py  users.py
apps/backend/src/cheeky_pony_backend/domain/: active_gates.py  alerts.py  anomaly.py  audit.py  lab.py  lab_readiness.py  labelling.py  operator_events.py  oui_lookup.py  pcap_models.py  ports.py  report_capture_findings.py  reports.py  users.py
apps/backend/src/cheeky_pony_backend/infra/: certificates.py  demo_dataset.py  demo_pcaps.py  demo_profiles.py  demo_stream.py  in_memory_store.py  in_memory_users.py  mongo_demo_stream.py  mongo_engagements.py  mongo_store.py  mongo_users.py  operator_broker.py  pcap_analysis_store.py  pcap_store.py  seed_admin.py  seed_demo.py  sensor_command_broker.py  signals_repo.py
apps/backend/src/cheeky_pony_backend/llm/: __init__.py  audit.py  budget.py  cache.py  client.py  dispatch.py  errors.py  fake_client.py  pricing.py  redactor.py  runtime_flags.py  service.py  service_audit.py  service_helpers.py  service_runtime.py  task_context.py  types.py  usage.py
apps/backend/src/cheeky_pony_backend/llm/insights/: __init__.py  alert_context.py  ap_description.py  engagement_summary.py  pcap_finding.py
apps/backend/src/cheeky_pony_backend/llm/prompts/: __init__.py
apps/backend/src/cheeky_pony_backend/llm/prompts/v1/: __init__.py  alert_context.txt  ap_description.txt  engagement_summary.txt  pcap_finding.txt
apps/backend/src/cheeky_pony_backend/pcap/: __init__.py  analyzer.py  filter_library.py  findings.py  hostname_redaction.py  network_findings.py  tshark.py  validator.py
apps/backend/src/cheeky_pony_backend/pcap/filters/: __init__.py  beacons.py  conversations.py  deauth.py  dhcp.py  dns.py  eapol.py  probe_responses.py  protocol_hierarchy.py  tls_sni.py
apps/backend/src/cheeky_pony_backend/workers/: __init__.py  settings.py  tasks.py
apps/backend/tests/: conftest.py  helpers.py  test_active_gates.py  test_alert_regex_safety.py  test_alerts_api.py  test_anomaly.py  test_auth_api.py  test_data_api.py  test_demo_stream.py  test_device_anomaly.py  test_engagements_api.py  test_lab_api.py  test_lab_readiness.py  test_labelling.py  test_llm_admin_controls.py  test_llm_ap_description.py  test_llm_cache_budget.py  test_llm_client.py  test_llm_engagement_summary.py  test_llm_pcap_finding.py  test_llm_redactor.py  test_llm_service_api.py  test_llm_settings.py  test_oui_lookup.py  test_pcap_analysis_api.py  test_pcap_analysis_store.py  test_pcap_analyzer.py  test_pcap_filters.py  test_pcap_store.py  test_pcap_validator.py  test_pcaps_api.py  test_report_capture_findings.py  test_reports_api.py  test_security_services.py  test_seed_demo.py  test_sensor_commands_api.py  test_sensors_api.py  test_signals_repo.py  test_tshark_runtime.py  test_users_api.py  (+2 more)
apps/backend/tests/fuzz/: test_alert_regex_fuzz.py
apps/frontend/: .gitignore  .prettierignore  README.md  eslint.config.js  index.html  package.json  tsconfig.app.json  tsconfig.node.json  tsr.config.json  vite.config.ts
apps/sensor-agent/: Dockerfile  pyproject.toml
apps/sensor-agent/src/cheeky_pony_sensor/: __init__.py  commands.py  config.py  http_server.py  kismet.py  main.py  normalizers.py  service.py  ws_client.py
apps/sensor-agent/tests/: test_commands.py  test_config.py  test_http_server.py  test_kismet.py  test_normalizers.py  test_service.py  test_ws_client.py  test_ws_client_runtime.py
docs/: THIRD_PARTY_NOTICES.md  architecture.md  frontend-design.md  operator-guide.md  threat-model.md
docs/adr/: 0001-architecture.md  0002-storage-mongodb.md  0003-pi-link-tailscale.md  0004-active-module-gating.md  (+19 more)
infra/: docker-compose.dast.yml  docker-compose.yml  frontend-placeholder.Dockerfile
scripts/: add-license-headers.py  generate-openapi-types.py  regenerate-logos.mjs
(+264 files in other folders)
