[project]
name = "cheeky-pony-backend"
version = "0.1.0"
description = "FastAPI backend for Cheeky Pony."
requires-python = ">=3.12"
license = { text = "AGPL-3.0-only" }
dependencies = [
  "argon2-cffi>=23.1,<24",
  "arq>=0.26,<1",
  "cheeky-pony-shared",
  "cryptography>=44,<46",
  "email-validator>=2.2,<3",
  "fastapi>=0.115,<1",
  "fastapi-users>=14,<15",
  "httpx>=0.28,<1",
  "motor>=3.6,<4",
  "opentelemetry-api>=1.29,<2",
  "opentelemetry-sdk>=1.29,<2",
  "pydantic>=2.10,<3",
  "pydantic-settings>=2.7,<3",
  "pyjwt>=2.10,<3",
  "pyotp>=2.9,<3",
  "redis>=5.2,<6",
  "structlog>=24.4,<25",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = [
  "bandit[toml]>=1.8",
  "hypothesis>=6.123",
  "mypy>=1.14",
  "pip-audit>=2.7",
  "pytest>=8.3",
  "pytest-asyncio>=0.25",
  "pytest-cov>=6.0",
  "ruff>=0.8",
  "testcontainers[mongodb,redis]>=4.9",
]

[project.scripts]
cheeky-pony-backend = "cheeky_pony_backend.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cheeky_pony_backend"]
