[project]
name = "cheeky-pony-sensor"
version = "0.1.0"
description = "Raspberry Pi sensor agent for Cheeky Pony."
requires-python = ">=3.12"
license = { text = "AGPL-3.0-only" }
dependencies = [
  "cheeky-pony-shared",
  "httpx>=0.28,<1",
  "pydantic>=2.10,<3",
  "websockets>=14,<16",
  "systemd-python>=235; sys_platform == 'linux'",
]

[project.optional-dependencies]
dev = [
  "cryptography>=46.0.6,<47",
  "hypothesis>=6.123",
  "mypy>=1.14",
  "pytest>=8.3",
  "pytest-asyncio>=0.25",
  "pytest-cov>=6.0",
  "ruff>=0.8",
]

[project.scripts]
cheeky-pony-sensor = "cheeky_pony_sensor.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cheeky_pony_sensor"]
